--- a/flask-example-deploy/deployment.yaml
+++ b/flask-example-deploy/deployment.yaml
@@ -18,5 +18,5 @@ spec:
         app: flask
     spec:
       containers:
-      - image: gasbugs/flask-example
+      - image: nginx
         name: flask-example
