--- a/flask-example-deploy/deployment.yaml
+++ b/flask-example-deploy/deployment.yaml
@@ -18,5 +18,8 @@ spec:
         app: flask
     spec:
       containers:
-      - image: nginx
+      - image: ip-10-101-1-161.ap-northeast-2.compute.internal/admin/nginx
         name: flask-example
+        imagePullPolicy: Always
+      imagePullSecrets:
+      - name: regcred 
