--- a/flask-example-deploy/deployment.yaml
+++ b/flask-example-deploy/deployment.yaml
@@ -16,7 +16,14 @@ spec:
       creationTimestamp: null
       labels:
         app: flask
-    spec:
-      containers:
-      - image: nginx
-        name: flask-example
+  spec:
+    containers:
+    - name: nginx
+      image: ip-10-101-1-161.ap-northeast-2.compute.internal/admin/nginx
+      imagePullPolicy: Always
+    imagePullSecrets:
+    - name: registry-secret 
+    tls:
+    - hosts:
+      - ip-10-101-1-161.ap-northeast-2.compute.internal
+      secretName: registry-tls-secret
