--- a/flask-example-deploy/deployment.yaml
+++ b/flask-example-deploy/deployment.yaml
@@ -19,7 +19,4 @@ spec:
   spec:
     containers:
     - name: nginx
-      image: ip-10-101-1-161.ap-northeast-2.compute.internal/admin/nginx
-      imagePullPolicy: Always
-    imagePullSecrets:
-    - name: registry-secret
+      image: nginx
