--- a/flask-example-deploy/deployment.yaml
+++ b/flask-example-deploy/deployment.yaml
@@ -21,6 +21,8 @@ spec:
       - name: nginx
         image: ip-10-101-1-161.ap-northeast-2.compute.internal/admin/nginx
         imagePullPolicy: Always
+      imagePullSecrets:
+      - name: registry-secret 
       tls:
       - hosts:
         - ip-10-101-1-161.ap-northeast-2.compute.internal
