--- a/flask-example-deploy/deployment.yaml
+++ b/flask-example-deploy/deployment.yaml
@@ -20,6 +20,7 @@ spec:
       containers:
       - name: nginx
         image: ip-10-101-1-161.ap-northeast-2.compute.internal/admin/nginx
+        imagePullPolicy: Always
       imagePullSecrets:
       - name: registry-secret 
       - name: ca-secre
