--- a/flask-example-deploy/deployment.yaml
+++ b/flask-example-deploy/deployment.yaml
@@ -19,4 +19,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: ip-10-101-1-161.ap-northeast-2.compute.internal/admin/nginx
+        imagePullPolicy: Always
+      imagePullSecrets:
+      - name: registry-secret 
