--- a/flask-example-deploy/deployment.yaml
+++ b/flask-example-deploy/deployment.yaml
@@ -23,3 +23,9 @@ spec:
         imagePullPolicy: Always
       imagePullSecrets:
       - name: registry-secret 
+      - name: ca-secret
+      tls:
+      - hosts:
+        - ip-10-101-1-161.ap-northeast-2.compute.internal
+        secretName: registry-tls-secret
+      - secretName: ca-secret
