--- a/flask-example-deploy/deployment.yaml
+++ b/flask-example-deploy/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: ip-10-101-1-161.ap-northeast-2.compute.internal/admin/flask-example
+        image: ip-10-101-1-161.ap-northeast-2.compute.internal/admin/flask-example:latest
         imagePullPolicy: Always
       imagePullSecrets:
       - name: registry-secret 
