--- a/development-deploy/deployment.yaml
+++ b/development-deploy/deployment.yaml
@@ -3,19 +3,19 @@ kind: Deployment
 metadata:
   creationTimestamp: null
   labels:
-    app: flask
-  name: flask
+    app: nginx
+  name: nginx
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: flask
+      app: nginx
   strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
-        app: flask
+        app: nginx
     spec:
       containers:
       - name: nginx
