--- a/development-deploy/service.yaml
+++ b/development-deploy/service.yaml
@@ -3,12 +3,12 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app: flask
-  name: flask
+    app: nginx
+  name: nginx
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 80
   selector:
-    app: flask
+    app: nginx
