--- a/development-deploy/deployment.yaml
+++ b/development-deploy/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: ip-10-101-1-161.ap-northeast-2.compute.internal/fis-20201197-cd4-project/nginx:75
+        image: ip-10-101-1-161.ap-northeast-2.compute.internal/fis-20201197-cd4-project/nginx:latest
         imagePullPolicy: Always
       imagePullSecrets:
       - name: registry-secret 
