--- a/operate-deploy/deployment.yaml
+++ b/operate-deploy/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: ip-10-101-3-226.ap-northeast-2.compute.internal/fis-20201197-cd4-project/nginx:latest
+        image: ip-10-101-3-226.ap-northeast-2.compute.internal/fis-20201197-cd4-project/nginx:1
         imagePullPolicy: Always
       imagePullSecrets:
       - name: registry-secret 
